CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(Hobby)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

INCLUDE_DIRECTORIES(
        utils/string_utils.h
)

ADD_SUBDIRECTORY(utils)

ADD_SUBDIRECTORY(word)

ADD_SUBDIRECTORY(lex)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SOURCE_FILES)

ADD_EXECUTABLE(Hobby
        ${UTILS_FILE}
        ${WORD_FILE}
        ${LEX_FILE}
        ${SOURCE_FILES})